<resources>
    <string name="app_name">Cashier App</string>
    <string name="user_name">User Name</string>
    <string name="pass_word">Pass Word</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="cashier">Cashier</string>
    <string name="no_account_yet_create_an_account">No account yet? Create an account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="title_activity_main_menu2">MainMenu2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
</resources>
