<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/login_bg"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:paddingVertical="60dp"
        android:text="@string/cashier"
        android:textAlignment="center"
        android:textColor="#d9bf77"

        android:textSize="50sp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_account_yet_create_an_account"
        android:textAlignment="center"
        android:textColor="@color/colorText" />

</androidx.appcompat.widget.LinearLayoutCompat>